Fix frontpage footer spacing

--- a/theme/moove/scss/moove/_frontpage.scss
+++ b/theme/moove/scss/moove/_frontpage.scss
@@ -121,7 +121,7 @@
         background-color: #fff;
         // background-size: 100%;
         background-attachment: fixed;
-        min-height: 724px;
+        min-height: 100vh;
         // padding: 0 4rem;
     }
     
@@ -148,7 +148,7 @@
         background-repeat: no-repeat;
         background-color: #fff;
         background-size: 100%;
-        background-attachment: fixed;
+        background-attachment: inherit;
         min-height: 690px;
         padding: 0 4rem;
     }  
@@ -334,8 +334,8 @@
     .frontpage-endorsement {
         // background: url(/theme/moove/pix/endorsement-bg.jpg) repeat;
         background: url(/sparklearn-web-app/theme/moove/pix/endorsement-bg.jpg) repeat;
-        background-size: auto !important;
-        margin: -4rem 0 0 0;
+        background-size: cover !important;
+        // margin: -4rem 0 0 0;
         padding: 2rem 0;
         // height: 40rem;
 
